# SoundShifterPro

./: .gitignore  CMakeLists.txt  RC1C_CHANGELOG.txt  README.md  README_EPIC3C.md  README_EPIC3D2.md  README_EPIC3D3.md  README_Epic3E1.txt
DSP/: AudioBlock.h  DSPConfig.h  FFTProcessor.h  IdentityPhaseLock.cpp  IdentityPhaseLock.h  OverlapAdd.h  PeakDetector.cpp  PeakDetector.h  PhaseLock.cpp  PhaseLock.h  PitchShiftEngine.cpp  PitchShiftEngine.h  RingBuffer.h  TransientDetector.cpp  TransientDetector.h  WindowProcessor.h
GUI/: ModernLookAndFeel.h  SoundShifterLookAndFeel.h  StereoMeter.h  Theme.h
SoundShifterPro/Source/: PluginProcessor.cpp
SoundShifterPro/Source/Presets/: PresetManager.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Presets/: FactoryPresets.cpp  FactoryPresets.h  PresetManager.cpp  PresetManager.h
